--- a/lessons.html
+++ b/lessons.html
@@ -50,7 +50,7 @@
 
     <!-- Footer with copyright and contact information -->
     <footer>
-        <p>&copy; 2025 Physics Fun Zone | All Rights Reserved</p>
+        <p>&copy; Hoos Exploring Physics | All Rights Reserved</p>
         <a href="mailto:fvc9ch@virginia.edu" target="_blank">Contact Us!</a>
     </footer>
 </body>
